spacing fixes
on design page space between titles and images

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -328,6 +328,9 @@ h3 p{
 }
 
 /*DESIGN*/
+.design-head{
+  margin-top: 36px;
+}
 .design-intro{
   display: flex;
   justify-content: space-evenly;
